# flake8-literal

./: .gitignore  .gitlab-ci.yaml  README.md  pyproject.toml  setup.cfg  setup.py  test.py
flake8_literal/: __init__.py  checker.py  quote_checker.py  raw_checker.py
